--- a/monografia/Conteudo/Prologo/agradecimentos.tex
+++ b/monografia/Conteudo/Prologo/agradecimentos.tex
@@ -1,10 +1,21 @@
 
 \begin{agradecimentos}
 
-A Deus, por ter sido meu abrigo em tempos de confusão,
-Aos meus pais, por sempre me apoiarem e me incentivarem a seguir em frente,
-Ao meu orientador, por me guiar em rotas que eu já havia desistido de seguir,
-Aos meus colegas, por me ajudarem, me apoiarem e me incentivarem a seguir em frente.
+A realização deste trabalho não seria possível sem o incentivo e apoio de diversas pessoas, às
+quais gostaria de expressar minha gratidão.
+
+Primeiramente, agradeço a Deus por me dar sabedoria e discernimento para superar os desafios
+enfrentados durante a realização deste trabalho.
+
+Agradeço à minha família, em especial aos meus pais, por sempre me apoiarem e incentivarem.
+
+Agradeço ao meu orientador, Prof. Dr. Antonio Marcos Massao Hachisuca, pela orientação e principalmente
+pela paciência e compreensão durante todo o desenvolvimento deste trabalho.
+
+Agradeço aos professores do curso de Ciência da Computação da Unioeste, que nutriram meu conhecimento 
+e me ajudaram a desenvolver as habilidades necessárias para a realização deste trabalho.
+
+E agradeço aos amigos e colegas de curso, que nunca deixaram eu duvidar de mim mesmo.
 
 \end{agradecimentos}
 % ---
