--- a/monografia/Conteudo/Prologo/epigrafe.tex
+++ b/monografia/Conteudo/Prologo/epigrafe.tex
@@ -4,9 +4,8 @@
 \begin{epigrafe}
     \vspace*{\fill}
 	\begin{flushright}
-		\textit{``God is our refuge and strength, a very present help in trouble.
-		Therefore will not we fear, though the earth be removed, and though the mountains be carried into the midst of the sea. Psalms 46''\\
-		(Autor)}
+		\textit{``The fear of the Lord is the beginning of wisdom: and the knowledge of the holy is understanding. Proverbs 9:10''\\
+		(Solomon)}
 	\end{flushright}
 \end{epigrafe}
 % ---
