--- a/monografia/Conteudo/Prologo/resumo.tex
+++ b/monografia/Conteudo/Prologo/resumo.tex
@@ -1,12 +1,28 @@
+% Resumo em português
 \begin{resumo}
-
-\vspace{\onelineskip}
-\noindent
-\textbf{Palavras-chaves}: Edifício Inteligente, Internet das Coisas, SmartOffice
+    Dispositivos de Internet das Coisas (IoT) na automação, em sua maioria, não suportam ambientes compartilhados, como escritórios e coworkings,
+    onde vários usuários precisam controlar o mesmo dispositivo. Este trabalho propõe o desenvolvimento de um sistema multiusuário para edifícios
+    inteligentes, permitindo a operação simultânea de uma unidade de climatização por diversos usuários, a fim de estudar a viabilidade de um
+    sistema para ambientes compartilhados. Os testes realizados demonstraram a viabilidade da solução, possibilitando a integração de dispositivos
+    IoT em espaços coletivos de forma eficiente e escalável.
+    
+    \vspace{\onelineskip}
+    \noindent
+    \textbf{Palavras-chave}: Edifício Inteligente, Internet das Coisas, SmartOffice, Automação.
 \end{resumo}
+    
+    % Abstract em inglês
+\begin{otherlanguage}{english}
+\begin{abstract}
+    Internet of Things (IoT) devices in automation mostly do not support shared environments, such as offices and coworking spaces, 
+    where multiple users need to control the same device. This study proposes the development of a multi-user system for smart buildings,
+    enabling the simultaneous operation of a climate control unit by multiple users to assess the feasibility of such a system in shared environments.
+    The tests conducted demonstrated the viability of the solution, allowing the efficient and scalable integration of IoT devices in collective spaces.
+    
+    \vspace{\onelineskip}
+    \noindent
+    \textbf{Keywords}: Smart Buildings, Internet of Things, SmartOffice, Automation.
+\end{abstract}
+\end{otherlanguage}
 
-Este trabalho teve como objetivo criar um sistema mínimo que possa testar
-a viabilidade de um sistema de edifício inteligente com múltiplos usuários.
-
-E para isso foi proposto uma arquitetura mínima onde foi possível testar a viabilidade de tal sistema.
-O sistema utilizou o protocolo MQTT para a comunicação entre servidores e o HTTP para comunicação entre usuário e aplicação.
+\newpage
