--- a/monografia/monografia.tex
+++ b/monografia/monografia.tex
@@ -2,7 +2,7 @@
 	12pt,				% tamanho da fonte
 	a4paper,			% tamanho do papel. 
 	oneside,            % imprimir em um lado da folha  //twosides
-	%english,
+	english,
     %french,
     brazil,			
 ]{Pacotes/abntex2}
@@ -53,6 +53,8 @@
     \include{Conteudo/Desenvolvimento/sistema}
 
     \include{Conteudo/Desenvolvimento/ServidorLocal/servidor_local}
+
+    \include{Conteudo/Desenvolvimento/ServidorRemoto/maestro}
 
     %\include{Conteudo/Desenvolvimento/ServidorLocal/introducao}
     %\include{Conteudo/Desenvolvimento/ServidorLocal/interfaces}
