--- a/monografia/Conteudo/Desenvolvimento/ServidorLocal/servidor_local.tex
+++ b/monografia/Conteudo/Desenvolvimento/ServidorLocal/servidor_local.tex
@@ -8,7 +8,7 @@ O \emph{Opus} é uma aplicação escrita em Python visando convergir a operaçã
 fabricantes e protocolos em um único ponto de controle, tal funcionalidade é obtida a partir da natureza modular
 do Python que foi aqui aproveitada para criar partes expansíveis do sistema, chamadas de \emph{drivers} e \emph{interfaces}.
 
-A aplicação é organizada em quatro módulos principais, como ilustrado na figura~\ref{fig:opus1}, são eles:
+A aplicação é organizada em quatro módulos principais, como ilustrado na figura~\ref{fig:opus_overall}, são eles:
 \begin{figure}[h!]
     \conteudoFigura
     [Elaborado pelo Autor (2025)]
@@ -18,13 +18,20 @@ A aplicação é organizada em quatro módulos principais, como ilustrado na fig
     {fig:opus1}
 \end{figure}
 
-\textbf{Interfaces}, módulos que adicionam uma forma de comunicação ao \emph{Opus}, como, por exemplo, uma \emph{interface} para comunicação com 
-dispositivos ZigBee[\ref{sec:zigbee}], ou KNX[\ref{sec:knx}]; \textbf{Drivers}, responsáveis por traduzir os comandos do \emph{Opus} para o 
-protocolo do dispositivo, podendo ou não utilizar alguma \emph{interface} própria para esta finalidade; \textbf{Managers}, são módulos da aplicação 
+\textbf{Interfaces}, módulos que adicionam uma forma de comunicação ao \emph{Opus}, como, por exemplo, 
+uma \emph{interface} para comunicação com dispositivos ZigBee[\ref{sec:zigbee}], ou KNX[\ref{sec:knx}]; 
+\textbf{Drivers}, responsáveis por traduzir os comandos do \emph{Opus} para o protocolo do dispositivo, 
+podendo ou não utilizar alguma \emph{interface} própria para esta finalidade; \textbf{Managers}, são módulos da aplicação 
 que gerenciam seu funcionamento, recebem, enviam e processam comandos vindos do Servidor Remoto e por fim, o banco de dados.
 
-\input{Conteudo/Desenvolvimento/ServidorLocal/interfaces.tex}
+\input{Conteudo/Desenvolvimento/ServidorLocal/arquivo_config}
 
-\input{Conteudo/Desenvolvimento/ServidorLocal/drivers.tex}
+\input{Conteudo/Desenvolvimento/ServidorLocal/interfaces}
 
-\input{Conteudo/Desenvolvimento/ServidorLocal/managers.tex}
+\input{Conteudo/Desenvolvimento/ServidorLocal/drivers}
+
+\input{Conteudo/Desenvolvimento/ServidorLocal/managers}
+
+\input{Conteudo/Desenvolvimento/ServidorLocal/banco_de_dados}
+
+\input{Conteudo/Desenvolvimento/ServidorLocal/tipos_genericos}
