--- a/monografia/Conteudo/Fim/trabalhos_futuros.tex
+++ b/monografia/Conteudo/Fim/trabalhos_futuros.tex
@@ -11,7 +11,7 @@ Recomenda-se para trabalhos futuros:
     é teóricamente possível incluir de automação que não sejam necessáriamente IoT ao \emph{Opus}, esses dispositivos utilizam outros protocolos de comunicação,
     como mencionados no capítulo 4 (\ref{tecnologias}), como o BACnet, KNX e ZigBee, que podem ser incluídos ao se criar \emph{Interfaces} capazes de interagir
     com esses protocolos.
-    \item \textbf{Implementação de um hierarquia à definir pelo administrador}: A implementação de uma hierarquia de usuários pode ser feita através da criação
+    \item \textbf{Implementação de um hierarquia a definir pelo administrador}: A implementação de uma hierarquia de usuários pode ser feita através da criação
     de mais ``\lstinline{roles}'', este campo do banco de dados é um inteiro que conta a maior hierarquia como 0 (administrador), sendo assim, é possível criar
     mais níveis de hierarquia, como um usuário que pode controlar somente alguns dispositivos em uma sala, de acordo com a necessidade do administrador.
 \end{itemize}
