--- a/monografia/monografia.tex
+++ b/monografia/monografia.tex
@@ -18,15 +18,15 @@
     %                    PRETEXTUAL                             %
     %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
     \input{Automatico/capa}
-    %\input{Automatico/folhaRosto}
-    %\input{Automatico/aprovacao}
+    \input{Automatico/folhaRosto}
+    \input{Automatico/aprovacao}
 
-    %\input{Conteudo/Prologo/dedicatoria}
-    %\input{Conteudo/Prologo/agradecimentos}
-    %\input{Conteudo/Prologo/epigrafe}
-    %\input{Conteudo/Prologo/resumo}
+    \input{Conteudo/Prologo/dedicatoria}
+    \input{Conteudo/Prologo/agradecimentos}
+    \input{Conteudo/Prologo/epigrafe}
+    \input{Conteudo/Prologo/resumo}
     
-    %\input{Automatico/lista_figuras}
+    \input{Automatico/lista_figuras}
     %\input{Automatico/lista_tabelas}
     %\input{Automatico/lista_siglas}  
     \input{Automatico/sumario}
@@ -56,17 +56,17 @@
 
     \include{Conteudo/Desenvolvimento/ServidorRemoto/servidor_remoto}
 
-    %\include{Conteudo/Desenvolvimento/ServidorLocal/introducao}
-    %\include{Conteudo/Desenvolvimento/ServidorLocal/interfaces}
-    %\include{Conteudo/Desenvolvimento/ServidorLocal/drivers}
+    \include{Conteudo/Desenvolvimento/InterfacedeUsuario/interface}
+
+    \include{Conteudo/Desenvolvimento/Multiusuarios/multiusuarios}
     %--------------------------------------------------------------
 
     %--------------------------------------------------------------
     % Parte IV - Conclusão
     %--------------------------------------------------------------
-    %\include{Conteudo/Conclusao/resultados}      % Novo arquivo: Resultados
-    %\include{Conteudo/Conclusao/conclusao}         % Novo arquivo: Conclusão
-    %\include{Conteudo/Conclusao/trabalhos_futuros} % Novo arquivo: Trabalhos Futuros
+    \include{Conteudo/Desenvolvimento/TesteseResultados/testes_e_resultados}
+    \include{Conteudo/Fim/conclusao}         % Novo arquivo: Conclusão
+    \include{Conteudo/Fim/trabalhos_futuros} % Novo arquivo: Trabalhos Futuros
 
     %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
     %                    PÓS-TEXTUAL                            %
