--- a/monografia/Conteudo/Comeco/introducao.tex
+++ b/monografia/Conteudo/Comeco/introducao.tex
@@ -51,9 +51,9 @@ Dentre os principais objetivos específicos destacam-se:
 
 \begin{itemize}
     \item Realizar uma pesquisa bibliográfica sobre edifícios inteligentes e suas demandas;
-    \item Estudar sobre as aplicações da internet das coisas em um edifício inteligente;
     \item Definir requisitos para um sistema de gerenciamento de um edifício inteligente;
     \item Propor e implementar um sistema de gerenciamento para edifícios inteligentes;
+    \item Tornar este sistema acessível a múltiplos usuários sem necessidade de cadastro prévio;
 \end{itemize}
 
 % Estrutura do trabalho (explicando brevemente o que será abordado em cada seção)
